# shell-parser-surfaces-rs

./: Cargo.toml  README.md
src/: ast.rs  decoding.rs  lib.rs  parse.rs
src/parse/: charset.rs  cursor.rs  descript.rs  parts.rs  surface.rs  surface_alias.rs  tooltip.rs
src/parse/surface/: animation_collision.rs  animation_interval.rs  animation_option.rs  animation_pattern.rs  collision.rs  draw_method.rs  element.rs  offset.rs
test_target/surfaces/: surfaces01.txt
