[package]
name = "seriko-parser"
version = "0.1.0"
edition = "2021"
authors = [ "tukinami seika" ]
license = "MIT"
description = "Parse SERIKO for ukagaka as surfaces.txt."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.33"
nom = "7.1.3"
