[package]
name = "shell-parser-surfaces-rs"
version = "0.1.0"
edition = "2021"
authors = [ "tukinami seika" ]
license = "MIT"
description = "Parse surfaces.txt for shell settings on Ukagaka."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
shell-parser-common-rs = { git = "https://github.com/tukinami/shell-parser-common-rs.git", branch = "main" }

[dev-dependencies]
encoding_rs = "0.8.33"
